--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VITE_API_URL="http://127.0.0.1:3001"
+VITE_SERVER="http://127.0.0.1:5173"
+VITE_BUBBLE="https://cdn.jsdelivr.net/gh/Lolichess/chatboticon/main.js"
