--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "copy-to-clipboard": "^3.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.9.0"
+    "react-router-dom": "^6.9.0",
+    "react-type-animation": "^3.0.1"
   },
   "devDependencies": {
     "@types/node": "^18.15.1",
